--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,8 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+cmake_minimum_required(VERSION 2.8.3)
+project(or_benchmarks)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
-
-rosbuild_init()
-
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
-
-find_package(OpenRAVE REQUIRED)
-include_directories(${OpenRAVE_INCLUDE_DIRS})
-link_directories(${OpenRAVE_LIBRARY_DIRS})
-
-rosbuild_add_library(${PROJECT_NAME}
-  src/CollisionCheckingBenchmark.cpp
-  src/CollisionCheckingModule.cpp
-)
-rosbuild_link_boost(${PROJECT_NAME} system)
-target_link_libraries(${PROJECT_NAME} yaml-cpp ${OpenRAVE_LIBRARIES})
+if (DEFINED CATKIN_TOPLEVEL OR (NOT ("$ENV{ROS_DISTRO}" STREQUAL "fuerte")))
+    include(${PROJECT_SOURCE_DIR}/catkin.cmake)
+else ()
+    include(${PROJECT_SOURCE_DIR}/rosbuild.cmake)
+endif ()
