--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <build_depend>moveit_ros_planning_interface</build_depend>
   <build_depend>openrave</build_depend>
   <build_depend>yaml-cpp</build_depend>
+  <build_depend>gperftools_21</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>moveit_core</run_depend>
   <run_depend>moveit_ros_planning_interface</run_depend>
@@ -23,4 +24,5 @@
   <run_depend>herbpy</run_depend>
   <run_depend>python</run_depend>
   <run_depend>python-argparse</run_depend>
+  <run_depend>gperftools_21</run_depend>
 </package>
