--- a/package.xml
+++ b/package.xml
@@ -10,12 +10,14 @@
   <author email="jeking@cs.cmu.edu">Jennifer King</author>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>gperftools_21</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>moveit_core</build_depend>
   <build_depend>moveit_ros_planning_interface</build_depend>
   <build_depend>openrave</build_depend>
   <build_depend>yaml-cpp</build_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>gperftools_21</run_depend>
   <run_depend>moveit_core</run_depend>
   <run_depend>moveit_ros_planning_interface</run_depend>
   <run_depend>openrave</run_depend>
